# ArduinoUARTEthernetBridge

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Client/: CMakeLists.txt
Client/Src/: CRC8.cpp  CRC8.h  Command.cpp  Command.h  Config.cpp  Config.h  Connection.h  ConnectionWorker.cpp  ConnectionWorker.h  DataBuffer.cpp  DataBuffer.h  DataProcessor.cpp  DataProcessor.h  IConfig.h  ILoggerFactory.h  IMessage.h  IMessageSubscriber.h  IPAddress.cpp  IPEndpoint.cpp  LogWriter.h  Main.cpp  MessageBroker.cpp  MessageBroker.h  OptionsParser.cpp  OptionsParser.h  PTYConnection.cpp  PTYConnection.h  PTYListener.cpp  PTYListener.h  PortConfig.cpp  PortConfig.h  PortWorker.cpp  PortWorker.h  RemoteBufferTracker.cpp  RemoteBufferTracker.h  RemoteConfig.cpp  RemoteConfig.h  ShutdownHandler.h  StdioLogger.h  TCPClient.cpp  (+15 more)
Firmware/: CMakeLists.txt
Firmware/UARTEthernetBridge/: UARTEthernetBridge.ino  alarmtimer.cpp  alarmtimer.h  clientstate.h  command.cpp  command.h  configuration.h  crc8.cpp  crc8.h  databuffer.cpp  databuffer.h  debug.cpp  debug.h  intervaltimer.cpp  intervaltimer.h  main_loop.cpp  resethelper.cpp  resethelper.h  segmented_buffer.cpp  segmented_buffer.h  settings_manager.h  tcpserver.cpp  tcpserver.h  timer.cpp  timer.h  uart_config.h  uart_helper.cpp  uart_helper.h  uartworker.cpp  uartworker.h  udpserver.cpp  udpserver.h  watchdog.h  watchdog_AVR.cpp  watchdog_AVR.h
LoopbackTestingFirmware/: .gitignore  ArduinoCmakeBuilder  CMakeLists.txt
LoopbackTestingFirmware/SerialLoopbackTester/: SerialLoopbackTester.ino  databuffer.cpp  databuffer.h  main_loop.cpp
TestUtil/: .gitignore  CMakeLists.txt
TestUtil/Src/: Connection.cpp  ILogger.h  IMessage.h  IMessageSender.h  IPAddress.h  IPEndpoint.h  ImmutableStorage.h  LogWriter.cpp  LoopbackTester.cpp  LoopbackTester.h  Main.cpp  MessageBroker.cpp  (+6 more)
UARTEthernetBridge/: UARTEthernetBridge.ino  debug.cpp  debug.h  main_loop.cpp  main_loop.h  settings.h  watchdog.h  watchdog_AVR.h
